--- a/index.html
+++ b/index.html
@@ -147,14 +147,15 @@
           <p class="max-w-lg mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure modi fuga repudiandae reiciendis ducimus nesciunt ratione impedit, tempora facere. Omnis.</p>
       </div>
       <div class="">
-        <form action="" >
-          <input class="w-full" type="text" placeholder="First Name" required >
-          <input class="w-24" type="text" placeholder="First Name" required >
+        <form action=""  >
+          <input class="w-2/5 m-2 p-2 rounded-xl" type="text" placeholder="First Name" required >
+          <input class="w-2/5 m-2 mr-0 p-2 rounded-xl" type="text" placeholder="First Name" required >
         </form>
         <form action="">
-          <input class="w-24" type="text" placeholder="First Name" required >
-          <input class="w-24" type="text" placeholder="First Name" required >
+          <input class="w-2/5 m-2 p-2 rounded-xl " type="text" placeholder="First Name" required >
+          <input class="w-2/5 m-2 mr-0 p-2 rounded-xl" type="text" placeholder="First Name" required >
         </form>
+        <textarea class="w-5/6 h-40 m-2 p-2 rounded-md" name="text" id="" placeholder="Write your message here"></textarea>
       </div>
       </div>
     </section>
