--- a/index.html
+++ b/index.html
@@ -141,22 +141,23 @@
         </div>
     </section>
     <section>
-      <div class="bg-[#dddcdc] px-32">
+      <div class="bg-[#dddcdc] md:px-32 px-10">
         <div class="py-8 text-center">
           <h2 class="text-3xl font-bold">Our Featured Products</h2>
           <p class="max-w-lg mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure modi fuga repudiandae reiciendis ducimus nesciunt ratione impedit, tempora facere. Omnis.</p>
       </div>
-      <div class="">
+      <div class="text-center">
         <form action=""  >
-          <input class="w-2/5 m-2 p-2 rounded-xl" type="text" placeholder="First Name" required >
+          <input class="md:w-2/5 w-full md:m-2 p-2 rounded-xl" type="text" placeholder="First Name" required >
           <input class="w-2/5 m-2 mr-0 p-2 rounded-xl" type="text" placeholder="First Name" required >
         </form>
         <form action="">
           <input class="w-2/5 m-2 p-2 rounded-xl " type="text" placeholder="First Name" required >
           <input class="w-2/5 m-2 mr-0 p-2 rounded-xl" type="text" placeholder="First Name" required >
         </form>
-        <textarea class="w-5/6 h-40 m-2 p-2 rounded-md" name="text" id="" placeholder="Write your message here"></textarea>
+        <textarea class="w-4/5 h-40 m-2 p-2 rounded-md" name="text" id="" placeholder="Write your message here"></textarea>
       </div>
+      
       </div>
     </section>
     <section>
