--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </section>
     <!-- Client start -->
     <section>
-      <div class="md:px-32">
+      <div class="md:px-32 mb-7">
         <h3 class="font-extrabold text-3xl text-center py-4">Read what our customers say</h3>
         <div class="flex md:flex-row flex-col gap-10">
           <div class="border-2 rounded-md p-3">
